--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -65,6 +65,8 @@
       <li>Open Licenses</li>
       <li>Where to Host Work, and Why</li>
       <li><a href="{{site.swc_pages}}/git-novice/reference">Reference...</a></li>
+      <li><a href="http://download.txgen.tamu.edu/shichen/VersionControl_git_SCworkshop_DWB_08-15-19.pdf" target="_blank">VersionControl_git_SCworkshop_DWB_08-15-19.pdf</a></li>
+      <li><a href="http://download.txgen.tamu.edu/shichen/git_vocab_08-14-19.txt" target="_blank">git_vocab_08-14-19.txt</a></li>
     </ul>
   </div>
   <!--
